# FFT_18

./: CMakeLists.txt  README.md  compile.txt  run.sh  run_locally.sh  run_with_docker.sh
CMAKE/src/: Makefile
CUDA_FFT/1D/: main  main.cu  static_header.hpp
CUDA_FFT/1D/src/: header.hpp  main
CUDA_FFT/2D/: main  main.cu  static_header.hpp
CUDA_FFT/2D/src/: gaussian_2d.hpp  header.hpp  main  main.cu  main_class_2d.hpp
FFT/include/: MPIHelper.h
FFT/src/: ParallelIterativeFFT.cpp  main.cpp
Python_Plot/: full_analysis.py  plot_1d.py  plot_2d.py
folder_prova/2D/: header.hpp  main  plot_2d.py
folder_prova/src/: Cooley-Tukey.cpp  main.cpp
folder_prova/src/1D/: fft_output.csv  header.hpp  main  plot.py  static_header.hpp
image_compression/: CMakeLists.txt  image_main.cpp
image_compression/include/: error_plot.hpp  fft2d.hpp  fft2d_par.hpp  fft_analysis.hpp  svd_analysis.hpp
image_compression/src/: error_plot.cpp  fft2d.cpp  fft2d_par.cpp  fft_analysis.cpp  svd_analysis.cpp
